--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "neemzy",
   "homepage": "https://github.com/neemzy/airlines-socket",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "socket.io": "~1.2.1"
   }
